Closed Bug 52513 Opened 25 years ago Closed 25 years ago

Disk Space Error during install

Categories

(SeaMonkey :: Installer, defect, P3)

x86
Windows 98
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: junruh, Assigned: ssu0262)

References

Details

(Whiteboard: [nsbeta3+])

I have Windows 98 installed in F:\win98. 1.) Install the 9/13 11:00 build of Seamonkey. 2.) Select typical install to c:\Program Files\Netscape and click Next. What happens: An error appears "123:Could not determine available disk space for f:\Program Files\Common Files\Netscape Shared\Security. I've never seen this error messsage before today. There are 458 Megs free. Clicking OK allows me to continue with the install.
accepting. The bug I fixed yesterday (bug #51928) exposed this bug. It's trivial fix. Nominating this for nsbeta3 because it will happen if the path its trying to calculate the disk space for does not exist (yet).
Status: NEW → ASSIGNED
Keywords: nsbeta3
Approving but can't justify a P1 or P2 -- see if you can get it fixed in time.
Whiteboard: [nsbeta3+]
fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
*** Bug 52639 has been marked as a duplicate of this bug. ***
verified dup
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.