fixing bug #52513 - Disk space error during install.  Affects windows platforms only.  r=sgehani