xpinstall/wizard/windows/setup/extra.h
@@ -178,6 +178,7 @@ char              *GetSaveInstallerPath(char *szBuf, DWORD dwBufSize);
 void              SaveInstallerFiles(void);
 void              ResetComponentAttributes(char *szFileIni);
 BOOL              IsInList(DWORD dwCurrentItem, DWORD dwItems, DWORD *dwItemsSelected);
+int               LocateExistingPath(char *szPath, char *szExistingPath, DWORD dwExistingPathSize);
 
 BOOL              bSDInit;
 
